--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>nav_cloning_analyze</name>
+  <name>nav_cloning_analysis</name>
   <version>0.0.0</version>
-  <description>The nav_cloning_analyze package</description>
+  <description>The nav_cloning_analysis package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
